fixed select dates button size on mobile

--- a/src/styles/views/room-products.less
+++ b/src/styles/views/room-products.less
@@ -229,6 +229,11 @@ room-products {
       .no-products {
         text-align: center;
         padding: @baseline;
+        button-submit{
+          .viewport-mobile &{
+            width: 100%;
+          }
+        }
       }
 
       &:last-of-type {
